--- a/src/components/Styles/_Game.scss
+++ b/src/components/Styles/_Game.scss
@@ -18,3 +18,21 @@
     }
   }
 }
+
+.learned {
+  color: $accent-color2;
+}
+
+.fade {
+  animation-name: fade;
+  animation-duration: 2s;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.1;
+  }
+  to {
+    opacity: 1;
+  }
+}
