--- a/src/components/Styles/_StyleSettings.scss
+++ b/src/components/Styles/_StyleSettings.scss
@@ -1,4 +1,5 @@
 $main-font-size: 2em;
 $middle-font-size: 1em;
 $main-color: rgb(224, 245, 224);
-$accent-color: rgb(84, 180, 84);
+$accent-color: #bb2729;
+$accent-color2: #960f0f;
